--- a/src/css/AddStory.css
+++ b/src/css/AddStory.css
@@ -15,21 +15,20 @@
     transform: scale(1.07);
 }
 
-.addStory > .MuiAvatar-root {
-    margin: 10px;
-    border: 3px solid #2e81f4;
-}
-
 .addStory > .addStory_top {
-    flex: 0.7;
+    flex: 1;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
 }
 
 .addStory > .addStory_bottom {
     flex: 0.3;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
     background-color: white;
+    border-radius: 0 0 10px 10px;
 }
 
 .addStory_bottom > .icon {
@@ -38,16 +37,16 @@
     justify-content: center;
     margin-right: auto;
     margin-left: auto;
-    top: -20px;
+    margin-top: -16px;
     width: 32px;
     height: 32px;
-    border: 8px solid white;
+    border: 5px solid white;
     border-radius: 50%;
     background-color: #0866FF;
 }
 
 .addStory_bottom > .icon > .MuiSvgIcon-root {
     color: white;
-    font-size: 20px;
+    font-size: 25px;
 }
 
