--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -51,8 +51,8 @@
     color: #2e81f4;
 }
 
-.header_option:hover > .gamepad {
-    clip-path: #2e81f4;
+.lugamepad:hover {
+    outline: #2e81f4;
 }
 
 .header_option {
